k8s-resources/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
  labels:
    app: example
spec:
  containers:
  - name: main
    image: nginx:1.21
    ports:
    - containerPort: 80
