k8s-resources/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  type: ClusterIP
  selector:
    app: example
  ports:
  - port: 80
    targetPort: 80
