k8s-resources/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-nodeport
spec:
  type: NodePort
  selector:
    app: example
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
